Small refactor and added all the vendor prefixes for the demo

--- a/0.2/ios/www-src/package.yml
+++ b/0.2/ios/www-src/package.yml
@@ -16,8 +16,11 @@ sources:
 
   - "Source/Core/Init.js"
   - "Source/ViewController/ViewController.Home.js"
+  - "Source/ViewController/ViewController.Section.js"
   - "Source/ViewController/ViewController.Transition.js"
-  - "Source/ViewController/ViewController.Component.js"
+  - "Source/ViewController/ViewController.Event.Tap.js"
+  - "Source/ViewController/ViewController.Event.Swipe.js"
+  - "Source/ViewController/ViewController.Event.Pinch.js"
   - "Source/ViewController/ViewController.Component.ActivityIndicator.js"
   - "Source/ViewController/ViewController.Component.Alert.js"
   - "Source/ViewController/ViewController.Component.Bar.js"
@@ -31,7 +34,3 @@ sources:
   - "Source/ViewController/ViewController.Component.ScrollView.VPaging.js"
   - "Source/ViewController/ViewController.Component.ScrollView.Grid.js"
   - "Source/ViewController/ViewController.Component.Slider.js"
-  - "Source/ViewController/ViewController.Button.js"
-  - "Source/ViewController/ViewController.Bar.js"
-  - "Source/ViewController/ViewController.List.js"
-  - "Source/ViewController/ViewController.Slider.js"
